# learnRust

./: .gitignore  1-elementary  Cargo.toml  LICENSE  README.md  rustr
1-Elementary/: 1-HelloWorld.rs  2-Greet.rs  README.md
learn-rust/: Cargo.toml
learn-rust/src/1-elementary/: 3-greet-bob.rs  5-fizzbuzz-triangle.rs  README.md
src/1-elementary/: 10-next-twenty-ly.rs  11-alternating-series.rs  2-greet-name.rs  4-sum-series.rs  6-sum-or-prod-series.rs  7-mult-table.rs  8-prime-seive.rs  9-guessing-game.rs  README.md
src/2-intermediate/: 1-nine-digit-equations.rs  2-compute-leaps.rs  2-compute-lys.rs  README.md
src/4-advanced/: README.md
