[package]
name = "learnRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-world"
path = "src/1-elementary/1-hello-world.rs"

[[bin]]
name = "greet-name"
path = "src/1-elementary/2-greet-name.rs"

[[bin]]
name = "greet-bob"
path = "src/1-elementary/3-greet-bob.rs"

[[bin]]
name = "sum-series"
path = "src/1-elementary/4-sum-series.rs"

[[bin]]
name = "fizzbuzz-triangle"
path = "src/1-elementary/5-fizzbuzz-triangle.rs"

[[bin]]
name = "sum-or-prod-series"
path = "src/1-elementary/6-sum-or-prod-series.rs"

[[bin]]
name = "mult-table"
path = "src/1-elementary/7-mult-table.rs"

[[bin]]
name = "prime-seive"
path = "src/1-elementary/8-prime-seive.rs"

[[bin]]
name = "guessing-game"
path = "src/1-elementary/9-guessing-game.rs"

[[bin]]
name = "next-twenty-ly"
path = "src/1-elementary/10-next-twenty-ly.rs"

[[bin]]
name = "alternating-series"
path = "src/1-elementary/11-alternating-series.rs"

[[bin]]
name = "nine-digit-equations"
path = "src/2-intermediate/1-nine-digit-equations.rs"

[[bin]]
name = "compute-leaps"
path = "src/2-intermediate/2-compute-leaps.rs"




[dependencies]
bigdecimal = "0.3.0"
chrono = "0.4.22"
eval = "0.4.3"
num = "0.4.0"
rand = "0.8.5"
rand_pcg = "0.3.1"


