[package]
name = "learnRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-world"
path = "src/bin/1-elementary/1-hello-world.rs"

[[bin]]
name = "greet-name"
path = "src/bin/1-elementary/2-greet-name.rs"

[[bin]]
name = "greet-bob"
path = "src/bin/1-elementary/3-greet-bob.rs"

[[bin]]
name = "sum-series"
path = "src/bin/1-elementary/4-sum-series.rs"

[[bin]]
name = "fizzbuzz-triangle"
path = "src/bin/1-elementary/5-fizzbuzz-triangle.rs"

[[bin]]
name = "sum-or-prod-series"
path = "src/bin/1-elementary/6-sum-or-prod-series.rs"

[[bin]]
name = "mult-table"
path = "src/bin/1-elementary/7-mult-table.rs"

[[bin]]
name = "prime-seive"
path = "src/bin/1-elementary/8-prime-seive.rs"

[[bin]]
name = "guessing-game"
path = "src/bin/1-elementary/9-guessing-game.rs"

[[bin]]
name = "next-twenty-ly"
path = "src/bin/1-elementary/10-next-twenty-ly.rs"

[[bin]]
name = "alternating-series"
path = "src/bin/1-elementary/11-alternating-series.rs"


[[bin]]
name = "largest-element"
path = "src/bin/2-lists-and-strings/2-largest-element.rs"

[[bin]]
name = "reverse-list" 
path = "src/bin/2-lists-and-strings/3-reverse-list.rs"
 
[[bin]]
name = "in-list"
path = "src/bin/2-lists-and-strings/4-in-list.rs"

[[bin]]
name = "odd-positions"
path = "src/bin/2-lists-and-strings/5-odd-positions.rs"

[[bin]]
name = "running-total"
path = "src/bin/2-lists-and-strings/6-running-total.rs"

[[bin]]
name = "check-palindrome"
path = "src/bin/2-lists-and-strings/7-check-palindrome.rs"

[[bin]]
name = "sum-versions"
path = "src/bin/2-lists-and-strings/8-sum-versions.rs"

[[bin]]
name = "map-perfect-squares"
path = "src/bin/2-lists-and-strings/9-map-perfect-squares.rs"

[[bin]]
name = "concatenate-lists"
path = "src/bin/2-lists-and-strings/10-concatenate-lists.rs"

[[bin]]
name = "coallate-lists"
path = "src/bin/2-lists-and-strings/11-coallate-lists.rs"

[[bin]]
name = "merge-sorted"
path = "src/bin/2-lists-and-strings/12-merge-sorted.rs"

# [[bin]]
# name = "rotate-list"
# path = "src/bin/2-lists-and-strings/13-rotate-list.rs"

[[bin]]
name = "fibonacci-sequence"
path = "src/bin/2-lists-and-strings/14-fibonacci-seq.rs"

[[bin]]
name = "return-list-of-digits"
path = "src/bin/2-lists-and-strings/15-return-list-of-digits.rs"

# [[bin]]
# name = "list-digit-representation"
# path = "src/bin/2-lists-and-strings/16-list-digit-representation.rs"

[[bin]]
name = "nine-digit-equations"
path = "src/bin/3-intermediate/1-nine-digit-equations.rs"

[[bin]]
name = "compute-leaps"
path = "src/bin/3-intermediate/2-compute-leaps.rs"

[[bin]]
name = "graphs-structure"
path = "src/bin/3-intermediate/3-graphs-structure.rs"

[[bin]]
name = "morse-code"
path = "src/bin/3-intermediate/8-morse-code.rs"




[dependencies]
bigdecimal = "0.3.0"
chrono = "0.4.22"
eval = "0.4.3"
num = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
rand_pcg = "0.3.1"


